--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Server Configuration
+SERVER_PORT=8080
+
 # Database Configuration
 DB_URL=jdbc:postgresql://localhost:5432/rest_api
 DB_USER=postgres
