Remove: Database schema documentation and update startup configuration
- Deleted `데이터베이스_스키마.md` file as it's no longer relevant.
- Added `start.sh` for environment setup and application start.
- Updated `application.properties` to include a default frontend URL.
- Removed `.env.example` file, migrating to explicit configurations.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,8 +52,8 @@ spring.task.execution.pool.core-size=2
 spring.task.execution.pool.max-size=5
 spring.task.execution.pool.queue-capacity=100
 
-# Frontend URL (for email links)
-app.frontend.url=${APP_FRONTEND_URL}
+# Default Frontend URL (for email links)
+app.frontend.url=http://localhost:3000
 
 # Logging
 logging.level.kr.hyfata.rest.api=INFO
